--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "E-Book Api project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.ts"
   },
   "keywords": [
     "nodejs",
@@ -12,12 +12,17 @@
     "mongoose",
     "js"
   ],
-  "author": "Mohammad Raza <raza77191@gmail.com>",
+  "author": "Raza Naqvi <raza77191@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.14.9",
+    "globals": "^15.8.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
