add config & dotenv package setup

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Raza Naqvi <raza77191@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.9",
     "globals": "^15.8.0",
@@ -23,6 +24,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
 }
