--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.9",
     "globals": "^15.8.0",
@@ -27,6 +28,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.4.4"
   }
 }
