--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.9",
     "globals": "^15.8.0",
     "nodemon": "^3.1.4",
@@ -33,6 +34,7 @@
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.4"
+    "mongoose": "^8.4.4",
+    "multer": "^1.4.5-lts.1"
   }
 }
