--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
-PORT=YOUR_PORT_NUMBER
+PORT=PORT_NUM
+MONGO_CONNECTION_STRING=MONGO_DB_URL
+NODE_ENV=ENV_TYPE(development,production)
+JWT_SECRET=JWT_SECRET_STRING
+CLOUDINARY_CLOUD=CLOUDINARY_CREDENTIALS
+CLOUDINARY_API_KEY=CLOUDINARY_CREDENTIALS
+CLOUDINARY_API_SECRET=CLOUDINARY_CREDENTIALS
+FRONTEND_DOMAIN=FRONTEND_ADDR
